erDiagram
    Recorrido ||--o{ Recorrido_Parada : tiene_paradas
    Recorrido_Parada }|--|| Parada : esta_en
    Parada ||--o{ Parada_Atractivo : tiene_atractivos
    Parada_Atractivo }|--|| Atractivo : es_atractivo_de

    Bus ||--o{ Estado_Bus_Historial : tiene_estados
    Estado_Bus_Historial }|--|| Estado_Bus : describe
    Chofer ||--o{ Viaje : conduce
    Viaje }|--|| Bus : realiza
    Recorrido ||--o{ Viaje : pertenece_a

    Viaje }|--|| EstadoViaje : tiene_estado 

    Recorrido {
        int id_recorrido PK
        str color_recorrido
        time duracion_aproximada_recorrido
        str descripcion_recorrido
        time hora_inicio
        time hora_fin 
        int numero_paradas
    }

    Recorrido_Parada {
        int id_recorrido_parada PK
        int id_recorrido FK
        int id_parada FK
        int orden
    }

    Parada {
        int id_parada PK
        str nombre_parada
        str direccion_parada
        str descripcion_parada
        str link_foto_parada
        int latitud_parada
        int longitud_parada
    }

    Parada_Atractivo {
        int id_parada_atractivo PK
        int id_parada FK
        int id_atractivo FK
    }

    Atractivo {
        int id_atractivo PK
        str nombre_atractivo
        int calificacion_estrellas
        str descripcion_atractivo
        int latitud_atractivo
        int longitud_atractivo
    }

    Bus {
        str patente_bus PK
        int numero_unidad
        datetime fecha_compra
    
    }

    Estado_Bus {
        int id_estado_bus PK
        str nombre_estado
        str descripcion_estado
    }

    Estado_Bus_Historial {
        int id_estado_historial PK
        str patente_bus FK
        int id_estado_bus FK
        datetime fecha_inicio_estado
    }

    Chofer {
        int id_chofer PK
        str nombre_chofer
        str apellido_chofer
        str legajo_chofer
        int dni_chofer
        str telefono
        date fecha_ingreso
        bool activo
    }

    Viaje {
        int id_viaje PK
        datetime fecha_programada
        time hora_inicio_programada
        datetime fecha_hora_inicio_real
        datetime fecha_hora_fin_real
        int demora_inicio_minutos
        int duracion_minutos_real
        str patente_bus FK
        int id_chofer FK
        int id_recorrido FK
        int id_estado_viaje FK
    }
    EstadoViaje {
        int id_estado_viaje PK
        str nombre_estado
        str descripcion_estado
    }
